[package]
name = "rustAuth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myent = {path="myent"}
axum = "0.6.19"
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }

[workspace]
members = ["myent"]